--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <meta name="twitter:image" content="https://laflotawines.com.ar/images/logo.jpg">
     -->
     <link rel="canonical" href="https://laflotawines.com.ar">
+    <link rel="icon" href="./iconos/logoflota.png" type="image/png">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>La Flota Wines - Vinos Premium</title>
@@ -29,7 +30,7 @@
     <nav class="navbar navbar-expand-lg botonera">
         <div class="container-fluid">
             <a class="navbar-brand" href="./index.html">
-                <img src="./iconos/logowines.png" alt="logo de flota wines" id="logo" class="iconowines">
+                <img src="./iconos/logoflotabarcos.png" alt="logo de flota wines" id="logo" class="iconowines">
             </a>
             <button class="navbar-toggler button-burger" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -62,10 +63,10 @@
         <div id="carouselExampleFade" class="carousel slide carousel-fade ">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./img/banner-wines.png" class="d-block w-100" alt="banner de vino wine">
+                    <img src="./img/banner-la-flota.png" class="d-block w-100" alt="banner de vino wine">
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/banner-wines2.png" class="d-block w-100" alt="banner de vino wine">
+                    <img src="./img/banner-la-flota-botella.png" class="d-block w-100" alt="banner de vino wine">
                 </div>
                 <div class="carousel-item">
                     <img src="./img/banner-wines.png" class="d-block w-100" alt="banner de vino wine">
@@ -86,11 +87,45 @@
     <!-- Main Content -->
     <main>
         <h1>La Flota Wines - Vinos Premium</h1>
-        <article>
+
+        <section>
+            <div class="card-container">
+                <div class="card">
+                    <img src="./img/botella-la-flota.jpg" alt="botella la flota">
+                    <div class="card-content">
+                        <h3>card 1</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate incidunt cumque eius suscipit, eaque error mollitia ab nam doloremque consectetur. Earum assumenda vel cum voluptatem dolore eum natus dolores corrupti!</p>
+                        <a href="" class="btn">mas info</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card-container">
+                <div class="card">
+                    <img src="./img/botella-la-flota.jpg" alt="botella la flota">
+                    <div class="card-content">
+                        <h3>card 2</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate incidunt cumque eius suscipit, eaque error mollitia ab nam doloremque consectetur. Earum assumenda vel cum voluptatem dolore eum natus dolores corrupti!</p>
+                        <a href="" class="btn">mas info</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card-container">
+                <div class="card">
+                    <img src="./img/botella-la-flota.jpg" alt="botella la flota">
+                    <div class="card-content">
+                        <h3>card 3</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate incidunt cumque eius suscipit, eaque error mollitia ab nam doloremque consectetur. Earum assumenda vel cum voluptatem dolore eum natus dolores corrupti!</p>
+                        <a href="" class="btn">mas info</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- 
+        <article class="article-flota">
             
             <section class="seccion-folleto triangle">
-                <div>
-                    <img src="./img/vino-prueba.png" alt="vino flota wines">
+                <div class="contenedor-botella-flota">
+                    <img src="./img/botella-la-flota.jpg" alt="vino flota wines" class="botella-la-flota">
                 </div>
                 <div class="descripcion-botella">
                     <h2>vino flota wines</h2>
@@ -101,7 +136,7 @@
             </section>
 
         </article>
-    
+    -->
     </main>
 
     <!-- Footer -->
