proyecto con scss y metodos responsive aplicados, cambio de logo

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <nav class="navbar navbar-expand-lg botonera">
         <div class="container-fluid">
             <a class="navbar-brand" href="./index.html">
-                <img src="./iconos/logoflotabarcos.png" alt="logo de flota wines" id="logo" class="iconowines">
+                <img src="./iconos/flota-logo-blanco2.png" alt="logo de flota wines" id="logo" class="iconowines">
             </a>
             <button class="navbar-toggler button-burger" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -73,7 +73,7 @@
             <div class="hero-content">
                 <h1>La Flota Wines</h1>
                 <p>Descubre la excelencia de nuestro La Flota Malbec</p>
-                <a href="#product" class="btn"><b>Conoce Nuestro Vino</b></a>
+                <a href="#product" class="btn">Conoce Nuestro Vino</a>
             </div>
         </section>
         <h2>La Flota Wines - Vinos Premium</h2>
@@ -86,11 +86,13 @@
                 <h2 class="h2-white">Acerca de nuestro vino</h2>
                 <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur non sed molestias ipsam possimus dolorem veritatis recusandae exercitationem ducimus voluptate tempore velit earum at modi sequi, mollitia perferendis fugiat sapiente.
                 </span>
-                <button class="btn">
+                <a href="#" class="a-ficha">
+                <button class="btn" id="btn-ficha">
                     ficha tecnica
                 </button>
+                </a>
             </div>
-            <img src="./img/La Flota.png" alt="botella de vino la flota" class="info-image">
+            <img src="./img/la-Flota.png" alt="botella de vino la flota" class="info-image">
         </div>
         </section>
         <section>
@@ -120,9 +122,7 @@
         <div class="group1-footer">
             <div class="box">
                 <h2>SOBRE NOSOTROS</h2>
-                <p>En La Flota Wines, nuestra pasión por el vino va más allá de una simple bebida; es una celebración de
-                    la tierra, la tradición y la dedicación a la excelencia. o un equilibrio perfecto entre tradición e
-                    innovación.</p>
+                <p>En La Flota Wines, nuestra pasión por el vino va más allá de una simple bebida</p>
                 <p>Precios bajos y gran variedad de productos disponibles</p>
                 <P>mas de 10 años brindando lo mejor de nosotros!</P>
             </div>
@@ -131,7 +131,7 @@
                 <a href="# target=" _blank" class="red-social-footer">
                     <img src="./iconos/linkedin.svg" alt="acceso a linkedin">
                 </a>
-                <a href="#" class="red-social-footer">
+                <a href="https://www.instagram.com/laflotawines/" class="red-social-footer" target="_blank">
                     <img src="./iconos/instagram.svg" alt="instagram de geogame">
                 </a>
                 <a href="#" target="_blank" class="red-social-footer">
