actualizacion web. cambio en las imagenes y optimizacion del sitio

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -135,7 +135,18 @@
             </div>
            
         </section>
-
+        <section id="distribucion" class="distribution">
+            <div class="distribution-contact">
+                <div class="distribution-text">
+                    <h2 class="h2-dark">¿Quieres distribuir nuestro producto?</h2>
+                    <p class="p-dark">Únete a nuestra red de distribuidores y lleva La Flota Malbec a más personas. Ofrecemos condiciones excepcionales para nuestros socios comerciales.</p>
+                    <a href="#" class="cta-button"><button class="btn">Más información</button></a>
+                </div>
+                <div class="distribution-image">
+                    <img src="../img/la-Flota.png" alt="Distribución de La Flota Malbec" class="floating">
+                </div>
+            </div>
+        </section>
 
     </main>
 
