--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Descubre La Flota Wines, un vino de calidad elaborado con uvas seleccionadas de los mejores viñedos. Una experiencia de sabor única, ideal para momentos especiales.">
+        content="Descubre La Flota Wines, un vino de calidad elaborado con uvas seleccionadas de los mejores viñedos.">
     <meta name="robots" content="index, follow">
     <meta name="copyright" content="© 2024 Alfonsa Bebidas">
     <meta name="keywords"
@@ -19,11 +19,11 @@
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="La Flota Wines - Vinos Premium">
-    <meta name="twitter:description" content="Descubre La Flota Wines, un vino de calidad elaborado con uvas seleccionadas. Perfecto para momentos especiales.">
+    <meta name="twitter:description" content="Descubre La Flota Wines, un vino de calidad elaborado con uvas seleccionadas.">
     <meta name="twitter:image" content="https://laflotawines.com.ar/images/logo.jpg">
     -->
     <link rel="canonical" href="https://laflotawines.com.ar">
-    <link rel="icon" href="./iconos/logoflota.png" type="image/png">
+    <link rel="icon" href="./iconos/logo-flota-text.png" type="image/png">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -35,37 +35,37 @@
 
 <body>
     <header>
-    <nav class="navbar navbar-expand-lg botonera">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="./index.html">
-                <img src="./iconos/flota-logo-blanco2.png" alt="logo de flota wines" id="logo" class="iconowines">
-            </a>
-            <button class="navbar-toggler button-burger" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon "></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <nav class="navbar navbar-expand-lg botonera">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="./index.html">
+                    <img src="./iconos/logo-la-flota-hd.png" alt="logo de flota wines" id="logo" class="iconowines">
+                </a>
+                <button class="navbar-toggler button-burger" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon "></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
-                    <li class="nav-item">
-                        <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
-                    </li>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Vino Flota wines</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./pages/contacto.html">Contacto</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Distribuidores</a>
-                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
+                        </li>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/laflota.html">Vino Flota wines</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Distribuidores</a>
+                        </li>
 
-                </ul>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
     </header>
     <!-- Main Content -->
     <main>
@@ -73,43 +73,47 @@
             <div class="hero-content">
                 <h1>La Flota Wines</h1>
                 <p>Descubre la excelencia de nuestro La Flota Malbec</p>
-                <a href="#product" class="btn">Conoce Nuestro Vino</a>
+                <a href="./pages/laflota.html" class="btn">Conoce Nuestro Vino</a>
             </div>
         </section>
-        <h2>La Flota Wines - Vinos Premium</h2>
 
-
-         <!-- info section-->
+        <!-- info section-->
         <section>
-        <div class="info-container">
-            <div class="info-container-text">
-                <h2 class="h2-white">Acerca de nuestro vino</h2>
-                <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur non sed molestias ipsam possimus dolorem veritatis recusandae exercitationem ducimus voluptate tempore velit earum at modi sequi, mollitia perferendis fugiat sapiente.
-                </span>
-                <a href="#" class="a-ficha">
-                <button class="btn" id="btn-ficha">
-                    ficha tecnica
-                </button>
-                </a>
+            <div class="info-container">
+                <div class="info-container-text">
+                    <h2 class="h2-white">Acerca de nuestro vino</h2>
+                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur non sed molestias ipsam
+                        possimus dolorem veritatis recusandae exercitationem ducimus voluptate tempore velit earum at
+                        modi sequi, mollitia perferendis fugiat sapiente.
+                    </span>
+                    <a href="./pages/laflota.html" class="a-ficha">
+                        <button class="btn" id="btn-ficha">
+                            ficha tecnica
+                        </button>
+                    </a>
+                </div>
+                <img src="./img/la-Flota.png" alt="botella de vino la flota" class="info-image">
+                <img src="./iconos/logo-la-flota-hd.png" alt="logo de la flota" class="logo-info">
             </div>
-            <img src="./img/la-Flota.png" alt="botella de vino la flota" class="info-image">
-        </div>
         </section>
         <section>
 
             <section class="image-grid">
                 <div class="grid-item">
-                    
-                    <img src="https://images.unsplash.com/photo-1560493676-04071c5f467b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1074&q=80" alt="Viñedo">
+
+                    <img src="https://images.unsplash.com/photo-1560493676-04071c5f467b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1074&q=80"
+                        alt="Viñedo">
                 </div>
                 <div class="grid-item">
-                    <img src="https://images.unsplash.com/photo-1516594915697-87eb3b1c14ea?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="Barricas de vino">
+                    <img src="https://images.unsplash.com/photo-1516594915697-87eb3b1c14ea?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
+                        alt="Barricas de vino">
                 </div>
                 <div class="grid-item">
-                    <img src="https://images.unsplash.com/photo-1506377295352-e3154d43ea9e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="Copas de vino">
+                    <img src="./img/vino-carne.webp" alt="vino y carne">
                 </div>
                 <div class="grid-item">
-                    <img src="https://images.unsplash.com/photo-1560493676-04071c5f467b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1074&q=80" alt="Viñedo">
+                    <img src="https://images.unsplash.com/photo-1560493676-04071c5f467b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1074&q=80"
+                        alt="Viñedo">
                 </div>
             </section>
         </section>
@@ -129,13 +133,13 @@
             <div class="red-social">
                 <h2>SIGUENOS EN NUESTRAS REDES</h2>
                 <a href="# target=" _blank" class="red-social-footer">
-                    <img src="./iconos/linkedin.svg" alt="acceso a linkedin">
+                    <img src="./iconos/linkedin.svg" alt="linkedin de flota wines">
                 </a>
                 <a href="https://www.instagram.com/laflotawines/" class="red-social-footer" target="_blank">
-                    <img src="./iconos/instagram.svg" alt="instagram de geogame">
+                    <img src="./iconos/instagram.svg" alt="instagram de la flota wines">
                 </a>
                 <a href="#" target="_blank" class="red-social-footer">
-                    <img src="./iconos/github.png" alt="acceso a github">
+                    <img src="./iconos/github.png" alt="acceso al desarrollador">
                 </a>
                 <p>puedes escribirnos por nuestras redes!</p>
                 <p>forma parte de nuestra comunidad!</p>
@@ -148,9 +152,6 @@
                 </li>
                 <li>
                     <a href="./error404.html">Preguntas frecuentes</a>
-                </li>
-                <li>
-                    <a href="./error404.html">Ayuda</a>
                 </li>
             </ul>
         </div>
