--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Descubre La Flota Wines, un vino de calidad elaborado con uvas seleccionadas de los mejores viñedos. Una experiencia de sabor única, ideal para momentos especiales.">
+    <meta name="description" content="Descubre La Flota Wines, un vino de calidad elaborado con uvas seleccionadas de los mejores viñedos. Una experiencia de sabor única, ideal para momentos especiales.">
     <meta name="robots" content="index, follow">
     <meta name="copyright" content="© 2024 Alfonsa Bebidas">
-    <meta name="keywords"
-        content="La Flota Wines, vino de calidad, vinos premium, vino Malbec, vinos argentinos, compra vino online">
+    <meta name="keywords" content="La Flota Wines, vino de calidad, vinos premium, vino Malbec, vinos argentinos, compra vino online">
     <meta property="og:title" content="La Flota Wines - Vinos Premium">
-    <meta property="og:description"
-        content="Descubre La Flota Wines, un vino de calidad elaborado con uvas seleccionadas. Perfecto para momentos especiales.">
+    <meta property="og:description" content="Descubre La Flota Wines, un vino de calidad elaborado con uvas seleccionadas. Perfecto para momentos especiales.">
     <!--meta property="og:image" content="https://laflotawines.com.ar/images/logo.jpg">
     <meta property="og:url" content="https://laflotawines.com.ar">
     <meta property="og:type" content="website">
@@ -29,6 +25,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Merriweather" as="style"
         onload="this.rel='stylesheet'">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="../css/styles.css">
     <title>La Flota Wines - Vinos Premium</title>
 </head>
@@ -54,7 +51,7 @@
                         </li>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Vino Flota wines</a>
+                            <a class="nav-link" href="./laflota.html">Vino Flota wines</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./contacto.html">Contacto</a>
@@ -69,47 +66,183 @@
         </nav>
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner headerr">
-              <div class="carousel-item active">
-                <img src="../img/banner-la-flota-botella.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="../img/banner-la-flota-botella.png"" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="../img/banner-la-flota-botella.png"" class="d-block w-100" alt="...">
-              </div>
+                <div class="carousel-item active">
+                    <img src="../img/banner-la-flota-uvas.webp" class="d-block w-100" alt="uvas en naturaleza">
+                </div>
+                <div class="carousel-item">
+                    <img src="../img/banner-la-flota-botella.png"" class=" d-block w-100" alt="vino flota wines">
+                </div>
+                <div class="carousel-item">
+                    <img src="../img/banner-la-flota-botella.png"" class=" d-block w-100" alt="...">
+                </div>
             </div>
-            <button class="carousel-control-prev" id="btn-header" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" id="span-header" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
+            <button class="carousel-control-prev" id="btn-header" type="button" data-bs-target="#carouselExample"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" id="span-header" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" id="btn-header" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-              <span class="carousel-control-next-icon" id="span-header" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
+            <button class="carousel-control-next" id="btn-header" type="button" data-bs-target="#carouselExample"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" id="span-header" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
             </button>
-          </div>
+        </div>
     </header>
     <!-- Main Content -->
     <main>
-        <div class="nosotros">
-            <h1>Quienes Somos</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia quo cupiditate maiores.</p>
-        </div>
+
         <div class="nosotros-container">
             <section class="section-nosotros">
                 <div class="about-image">
-                    <img src="../img/imagen-contact.jpg" alt="imagen sobre la flota">
+                    <img src="../img/picnic.webp" alt="imagen sobre la flota">
                 </div>
                 <div class="about-content">
+                    <h1 class="h1-about">Quienes Somos</h1>
                     <h2>acerca de nosotros en la flota</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis blanditiis inventore totam at ipsum nulla. Ipsa, sed eius. Magni, perspiciatis sed. Dolores est perspiciatis exercitationem! Repellat veritatis quis accusantium adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto unde doloribus et accusantium voluptates, in obcaecati eum consectetur modi, molestias mollitia dicta ducimus iure aperiam, natus animi numquam fugit blanditiis!</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis blanditiis inventore totam at
+                        ipsum nulla. Ipsa, sed eius. Magni, perspiciatis sed. Dolores est perspiciatis exercitationem!
+                        Repellat veritatis quis accusantium adipisci. Lorem ipsum dolor sit amet, consectetur
+                        adipisicing elit. Iusto unde doloribus et accusantium voluptates, in obcaecati eum consectetur
+                        modi, molestias mollitia dicta ducimus iure aperiam, natus animi numquam fugit blanditiis!</p>
                     <a href="#">
-                        <button class="btn">Read more</button>
+                        <button class="btn mas-info-nosotros">Read more</button>
                     </a>
                 </div>
-
             </section>
-        </div>
+            <section id="equipo" class="team">
+                <div class="container">
+                    <h2>Nuestro Equipo</h2>
+                    <div class="team-grid">
+                        <div class="team-member">
+                            <img src="../img/persona-1.jpg" alt="Foto de persona 1">
+                            <h3>María González</h3>
+                            <p class="role">Enóloga Jefe</p>
+                            <p class="bio">Con más de 20 años de experiencia, María lidera nuestro equipo de producción,
+                                aportando innovación y pasión a cada cosecha.</p>
+                        </div>
+                        <div class="team-member">
+                            <img src="../img/persona-2.webp" alt="Foto de persona 2">
+                            <h3>Carlos Rodríguez</h3>
+                            <p class="role">Viticultor Principal</p>
+                            <p class="bio">Carlos supervisa nuestros viñedos, asegurando que cada uva alcance su máximo
+                                potencial a través de prácticas sostenibles.</p>
+                        </div>
+                        <div class="team-member">
+                            <img src="../img/persona-3.webp" alt="Foto de persona 3">
+                            <h3>Laura Martínez</h3>
+                            <p class="role">Sommelier</p>
+                            <p class="bio">Laura aporta su refinado paladar y amplio conocimiento para garantizar la
+                                calidad y consistencia de nuestros vinos.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="laflota-history">
+                <div class="laflota-history__container">
+                    <div class="laflota-history__content">
+                        <h2 class="laflota-history__title">Nuestra Historia</h2>
+                        <p class="laflota-history__text">Desde nuestros humildes comienzos en el corazón del Valle de
+                            Uco, La Flota ha navegado por los mares del mundo vitivinícola con una misión clara: crear
+                            vinos excepcionales que capturen la esencia única de nuestra tierra mendocina.</p>
+                        <p class="laflota-history__text">Fundada por un grupo de amigos apasionados por el vino, nuestra
+                            bodega ha crecido de manera constante, siempre manteniendo el espíritu artesanal y la
+                            búsqueda incansable de la excelencia que nos caracteriza desde el primer día.</p>
+                    </div>
+                    <div class="laflota-history__image">
+                        <img src="../img/vino-quienes-somos.webp" alt="Viñedos de La Flota" class="laflota-history__img">
+                    </div>
+                </div>
+            </section>
+
+            <section class="laflota-process">
+                <div class="laflota-process__container">
+                    <h2 class="laflota-process__title">El Arte de Nuestro Vino</h2>
+                    <div class="laflota-process__grid">
+                        <div class="laflota-process__step">
+                            <div class="laflota-process__image">
+                                <img src="../img/uvas.webp" alt="Selección de Uvas">
+                            </div>
+                            <div class="laflota-process__content">
+                                <div class="laflota-process__icon">
+                                    <i class="fas fa-seedling"></i>
+                                </div>
+                                <h3>Selección de Uvas</h3>
+                                <p>Nuestras uvas Malbec son cuidadosamente seleccionadas a mano en el momento óptimo de
+                                    maduración, asegurando la más alta calidad desde el inicio.</p>
+                            </div>
+                        </div>
+                        <div class="laflota-process__step">
+                            <div class="laflota-process__image">
+                                <img src="../img/fermentacion.webp" alt="Fermentación">
+                            </div>
+                            <div class="laflota-process__content">
+                                <div class="laflota-process__icon">
+                                    <i class="fas fa-wine-bottle"></i>
+                                </div>
+                                <h3>Fermentación</h3>
+                                <p>La fermentación se realiza en tanques de acero inoxidable con temperatura controlada,
+                                    permitiendo extraer los mejores aromas y sabores de nuestras uvas.</p>
+                            </div>
+                        </div>
+                        <div class="laflota-process__step">
+                            <div class="laflota-process__image">
+                                <img src="../img/barril.webp" alt="Añejamiento">
+                            </div>
+                            <div class="laflota-process__content">
+                                <div class="laflota-process__icon">
+                                    <i class="fas fa-box"></i>
+                                </div>
+                                <h3>Añejamiento</h3>
+                                <p>Nuestro vino madura pacientemente en barricas de roble francés y americano durante 12
+                                    meses, desarrollando complejidad y estructura únicas.</p>
+                            </div>
+                        </div>
+                        <div class="laflota-process__step">
+                            <div class="laflota-process__image">
+                                <img src="../img/embotellado.webp" alt="Embotellado">
+                            </div>
+                            <div class="laflota-process__content">
+                                <div class="laflota-process__icon">
+                                    <i class="fas fa-glass-cheers"></i>
+                                </div>
+                                <h3>Embotellado</h3>
+                                <p>Cada botella es llenada con precisión y sellada para preservar los sabores y aromas
+                                    únicos de nuestro vino, listo para ser disfrutado.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="laflota-origins">
+                <div class="laflota-origins__container">
+                    <div class="laflota-origins__content">
+                        <h2 class="laflota-origins__title">Los Orígenes de La Flota</h2>
+                        <div class="laflota-origins__text">
+                            <p>La historia de La Flota comenzó en 1995, cuando un grupo de amigos apasionados por el
+                                vino decidió embarcarse en una aventura vitivinícola en el corazón del Valle de Uco,
+                                Mendoza. Inspirados por la rica tradición vinícola de la región y movidos por un
+                                espíritu innovador, estos pioneros adquirieron una pequeña parcela de tierra con la
+                                visión de crear vinos excepcionales que capturaran la esencia única del terroir
+                                mendocino.</p>
+                            <p>El nombre "La Flota" surgió como un homenaje a los antiguos navegantes que, al igual que
+                                nuestros fundadores, se aventuraron en lo desconocido en busca de nuevos horizontes.
+                                Esta metáfora náutica no solo refleja el espíritu aventurero de la bodega, sino también
+                                la idea de que cada cosecha es un viaje único, con sus propios desafíos y
+                                descubrimientos.</p>
+                            <p>A lo largo de los años, La Flota ha crecido de manera constante, expandiendo sus viñedos
+                                y perfeccionando sus técnicas de vinificación. Hoy, nuestros vinos son reconocidos
+                                internacionalmente por su calidad y carácter distintivo, manteniendo siempre el
+                                compromiso con la artesanía y la excelencia que ha sido el sello de La Flota desde sus
+                                inicios.</p>
+                        </div>
+                    </div>
+                    <div class="laflota-origins__image">
+                        <img src="../img/origenes-flota.webp" alt="Fundadores de La Flota">
+                    </div>
+                </div>
+            </section>
 
 
     </main>
@@ -126,13 +259,13 @@
             <div class="red-social">
                 <h2>SIGUENOS EN NUESTRAS REDES</h2>
                 <a href="#" target="_blank" class="red-social-footer">
-                    <img src="../iconos/linkedin.svg" alt="acceso a linkedin">
+                    <img src="../iconos/linkedin.svg" alt="linkedin de la flota">
                 </a>
                 <a href="https://www.instagram.com/laflotawines/" class="red-social-footer" target="_blank">
                     <img src="../iconos/instagram.svg" alt="instagram de la flota">
                 </a>
                 <a href="#" target="_blank" class="red-social-footer">
-                    <img src="../iconos/github.png" alt="acceso a github">
+                    <img src="../iconos/github.png" alt="github del desarrollador">
                 </a>
                 <p>puedes escribirnos por nuestras redes!</p>
                 <p>forma parte de nuestra comunidad!</p>
@@ -146,10 +279,6 @@
                 <li>
                     <a href="../error404.html">Preguntas frecuentes</a>
                 </li>
-                <li>
-                    <a href="../error404.html">Ayuda</a>
-                </li>
-            </ul>
         </div>
         <div class="group2-footer">
             <small>&copy;2024 <b>Vinos Wines</b> - Todos Los Derechos Reservados</small>
