se corrigieron algunos apartados de meta y ciertos arreglos en responsive, se agrego un boton de wp

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Merriweather" as="style"
         onload="this.rel='stylesheet'">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <title>La Flota Wines - Vinos Premium</title>
+    <title>La Flota Wines | Vino Premium</title>
 </head>
 
 <body>
@@ -82,9 +83,9 @@
             <div class="info-container">
                 <div class="info-container-text">
                     <h2 class="h2-white">Acerca de nuestro vino</h2>
-                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur non sed molestias ipsam
-                        possimus dolorem veritatis recusandae exercitationem ducimus voluptate tempore velit earum at
-                        modi sequi, mollitia perferendis fugiat sapiente.
+                    <span class="span-vino">Hay un conjunto de embarcaciones que ya zarpó y queremos que conozcas
+                        Del lugar más especial de Mendoza a toda la Argentina, LA FLOTA se está acercando para empezar a formar parte de esos momentos que quisieras guardar para siempre. 
+                        Este mapa del tesoro tiene mucho más para descubrir
                     </span>
                     <a href="./pages/laflota.html" class="a-ficha">
                         <button class="btn" id="btn-ficha">
@@ -167,6 +168,9 @@
     <script src="js/navbar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/main.js"></script>
+    <a href="https://api.whatsapp.com/send?phone=2657326848&text=Hola, me gustaria Obtener más información sobre la flota" class="float pulse" target="_blank">
+        <i class=" fa-brands fa fa-whatsapp my-float" aria-hidden="true"></i>
+        </a>
 </body>
 
 </html>
