--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Descubre La Flota Wines, un vino de calidad elaborado con uvas seleccionadas de los mejores viñedos. Una experiencia de sabor única, ideal para momentos especiales.">
+    <meta name="description" content="Descubre el detras de La Flota Wines, un vino de calidad elaborado con uvas seleccionadas de los mejores viñedos. Una experiencia de sabor única, ideal para momentos especiales.">
     <meta name="robots" content="index, follow">
     <meta name="copyright" content="© 2024 Alfonsa Bebidas">
-    <meta name="keywords" content="La Flota Wines, vino de calidad, vinos premium, vino Malbec, vinos argentinos, compra vino online">
-    <meta property="og:title" content="La Flota Wines - Vinos Premium">
-    <meta property="og:description" content="Descubre La Flota Wines, un vino de calidad elaborado con uvas seleccionadas. Perfecto para momentos especiales.">
+    <meta name="keywords" content="FlotaWines, vino Malbec, mar y vino, historia de FlotaWines, vino inspirado en el mar">
+    <meta property="og:title" content="La Flota Wines -La Historia del Malbec del Mar">
+    <meta name="description" content="Conoce la historia detras de la FlotaWines, un vino Malbec inspirado en la conexión entre el mar y el viñedo.">
+    <meta name="author" content="FlotaWines">
     <!--meta property="og:image" content="https://laflotawines.com.ar/images/logo.jpg">
     <meta property="og:url" content="https://laflotawines.com.ar">
     <meta property="og:type" content="website">
@@ -27,7 +28,7 @@
         onload="this.rel='stylesheet'">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="../css/styles.css">
-    <title>La Flota Wines - Vinos Premium</title>
+    <title>Nosotros - Flota Wines </title>
 </head>
 
 <body>
@@ -104,7 +105,7 @@
                         Repellat veritatis quis accusantium adipisci. Lorem ipsum dolor sit amet, consectetur
                         adipisicing elit. Iusto unde doloribus et accusantium voluptates, in obcaecati eum consectetur
                         modi, molestias mollitia dicta ducimus iure aperiam, natus animi numquam fugit blanditiis!</p>
-                    <a href="#">
+                    <a href="#origin">
                         <button class="btn mas-info-nosotros">Read more</button>
                     </a>
                 </div>
@@ -218,7 +219,7 @@
             <section class="laflota-origins">
                 <div class="laflota-origins__container">
                     <div class="laflota-origins__content">
-                        <h2 class="laflota-origins__title">Los Orígenes de La Flota</h2>
+                        <h2 class="laflota-origins__title" id="origin">Los Orígenes de La Flota</h2>
                         <div class="laflota-origins__text">
                             <p>La historia de La Flota comenzó en 1995, cuando un grupo de amigos apasionados por el
                                 vino decidió embarcarse en una aventura vitivinícola en el corazón del Valle de Uco,
@@ -292,6 +293,9 @@
     <script src="../js/navbar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../js/main.js"></script>
+    <a href="https://api.whatsapp.com/send?phone=2657326848&text=Hola, me gustaria Obtener más información sobre la flota" class="float pulse" target="_blank">
+        <i class=" fa-brands fa fa-whatsapp my-float" aria-hidden="true"></i>
+        </a>
 </body>
 
 </html>
