--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,23 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Descubre La Flota Wines, un vino de calidad elaborado con uvas seleccionadas de los mejores viñedos. Una experiencia de sabor única, ideal para momentos especiales.">
+    <meta name="description" content="¿Tienes preguntas sobre FlotaWines? quieres distribuir nuestro producto? Ponte en contacto con nosotros">
     <meta name="robots" content="index, follow">
     <meta name="copyright" content="© 2024 Alfonsa Bebidas">
-    <meta name="keywords"
-        content="La Flota Wines, vino de calidad, vinos premium, vino Malbec, vinos argentinos, compra vino online">
-    <meta property="og:title" content="La Flota Wines - Vinos Premium">
-    <meta property="og:description"
-        content="Descubre La Flota Wines, un vino de calidad elaborado con uvas seleccionadas. Perfecto para momentos especiales.">
-    <!--meta property="og:image" content="https://laflotawines.com.ar/images/logo.jpg">
+    <meta name="keywords" content="FlotaWines contacto, contacto con FlotaWines, comunicación con FlotaWines, consultas sobre vino, distribuir vino">
+    <meta property="og:title" content="La Flota Wines - Vinos Premium">    
     <meta property="og:url" content="https://laflotawines.com.ar">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="La Flota Wines - Vinos Premium">
     <meta name="twitter:description" content="Descubre La Flota Wines, un vino de calidad elaborado con uvas seleccionadas. Perfecto para momentos especiales.">
     <meta name="twitter:image" content="https://laflotawines.com.ar/images/logo.jpg">
-    -->
     <link rel="canonical" href="https://laflotawines.com.ar">
     <link rel="icon" href="../iconos/logoflota.png" type="image/png">
     <link rel="stylesheet" href="../css/styles.css">
@@ -29,8 +23,9 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Merriweather" as="style"
         onload="this.rel='stylesheet'">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="../css/styles.css">
-    <title>La Flota Wines - Vinos Premium</title>
+    <title>Contacto | FlotaWines Conecta con Nosotros</title>
 </head>
 
 <body>
@@ -54,7 +49,7 @@
                         </li>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Vino Flota wines</a>
+                            <a class="nav-link" href="./laflota.html">Vino Flota wines</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./contacto.html">Contacto</a>
@@ -196,6 +191,9 @@
     <script src="../js/navbar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../js/main.js"></script>
+    <a href="https://api.whatsapp.com/send?phone=2657326848&text=Hola, me gustaria Obtener más información sobre la flota" class="float pulse" target="_blank">
+        <i class=" fa-brands fa fa-whatsapp my-float" aria-hidden="true"></i>
+        </a>
 </body>
 
 </html>
