--- a/pages/laflota.html
+++ b/pages/laflota.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Descubre La Flota Wines, un vino de calidad elaborado con uvas seleccionadas de los mejores viñedos. Una experiencia de sabor única, ideal para momentos especiales.">
+    <meta name="description" content="Descubre la Flota de vinos de FlotaWines. Cada botella de nuestro Malbec está inspirada en la aventura marítima, el viento y el océano que influyen en su sabor.">
     <meta name="robots" content="index, follow">
     <meta name="copyright" content="© 2024 Alfonsa Bebidas">
-    <meta name="keywords"
-        content="La Flota Wines, vino de calidad, vinos premium, vino Malbec, vinos argentinos, compra vino online">
+    <meta name="keywords" content="FlotaWines, flota de vinos, vino inspirado en el mar, Malbec y mar, aventura marítima en vino">
     <meta property="og:title" content="La Flota Wines - Vinos Premium">
     <meta property="og:description"
         content="Descubre La Flota Wines, un vino de calidad elaborado con uvas seleccionadas. Perfecto para momentos especiales.">
+    <meta name="author" content="FlotaWines">
     <!--meta property="og:image" content="https://laflotawines.com.ar/images/logo.jpg">
     <meta property="og:url" content="https://laflotawines.com.ar">
     <meta property="og:type" content="website">
@@ -30,7 +29,7 @@
         onload="this.rel='stylesheet'">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <title>La Flota Wines - Vinos Premium</title>
+    <title>La Flota Malbec | Flota Wines</title>
 </head>
 
 <body>
@@ -229,6 +228,9 @@
     <script src="../js/navbar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../js/main.js"></script>
+    <a href="https://api.whatsapp.com/send?phone=2657326848&text=Hola, me gustaria Obtener más información sobre la flota" class="float pulse" target="_blank">
+        <i class=" fa-brands fa fa-whatsapp my-float" aria-hidden="true"></i>
+        </a>
 </body>
 
 </html>
