se optimizaron las imagenes de la web

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="La Flota Wines - Vinos Premium">
     <meta name="twitter:description" content="Descubre La Flota Wines, un vino de calidad elaborado con uvas seleccionadas.">
-    <meta name="twitter:image" content="https://laflotawines.com.ar/images/logo.jpg">
+    <meta name="twitter:image" content="https://laflotawines.com.ar/images/logo.jpg">img/la-Flota.png
     -->
     <link rel="canonical" href="https://laflotawines.com.ar">
     <link rel="icon" href="./iconos/logo-flota-text.png" type="image/png">
@@ -31,6 +31,7 @@
         onload="this.rel='stylesheet'">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="./css/animate.css">
     <title>La Flota Wines | Vino Premium</title>
 </head>
 
@@ -62,7 +63,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Distribuidores</a>
                         </li>
-
                     </ul>
                 </div>
             </div>
@@ -70,8 +70,8 @@
     </header>
     <!-- Main Content -->
     <main>
-        <section id="home" class="hero">
-            <div class="hero-content">
+        <section id="home" class="hero ">
+            <div class="hero-content animate__animated hidden animated-element">
                 <h1>La Flota Wines</h1>
                 <p>Descubre la excelencia de nuestro La Flota Malbec</p>
                 <a href="./pages/laflota.html" class="btn">Conoce Nuestro Vino</a>
@@ -93,13 +93,13 @@
                         </button>
                     </a>
                 </div>
-                <img src="./img/la-Flota.png" alt="botella de vino la flota" class="info-image">
+                <img src="./img/la-Flota.webp" alt="botella de vino la flota" class="info-image">
                 <img src="./iconos/logo-la-flota-hd.png" alt="logo de la flota" class="logo-info">
             </div>
         </section>
         <section>
 
-            <section class="image-grid">
+            <section class="image-grid animate__animated hidden animated-element">
                 <div class="grid-item">
 
                     <img src="https://images.unsplash.com/photo-1560493676-04071c5f467b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1074&q=80"
@@ -174,3 +174,4 @@
 </body>
 
 </html>
+
