--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -25,6 +25,7 @@
         onload="this.rel='stylesheet'">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/animate.css">
     <title>Contacto | FlotaWines Conecta con Nosotros</title>
 </head>
 
@@ -64,8 +65,8 @@
         </nav>
     </header>
     <!-- Main Content -->
-    <main class="main-form">
-        <section class="section-form">
+    <main class="main-form animate__animated hidden animated-element">
+        <section class="section-form ">
             <div class="container-contact">
                 <div class="section-form-container">
                     <h1 class="h1-contact">Contáctanos</h1>
