--- a/pages/laflota.html
+++ b/pages/laflota.html
@@ -29,6 +29,7 @@
         onload="this.rel='stylesheet'">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="../css/animate.css">
     <title>La Flota Malbec | Flota Wines</title>
 </head>
 
@@ -69,14 +70,14 @@
     </header>
     <!-- Main Content -->
     <main class="main-laflota">
-        <section class="wine-showcase">
+        <section class="wine-showcase animate__animated hidden animated-element">
             <div class="wine-container wine-showcase__grid">
                 <div class="wine-bottle">
                     <div class="wine-bottle__wrapper">
-                        <img src="../img/flota-ficha3.png" alt="La Flota Malbec 2024" class="wine-bottle__image">
+                        <img src="../img/flota-ficha3.webp" alt="La Flota Malbec 2024" class="wine-bottle__image">
                     </div>
                 </div>
-                <div class="wine-details">
+                <div class="wine-details ">
                     <h2 class="wine-details__title">La Flota Malbec 2024</h2>
                     <div class="wine-details__box">
                         <h3 class="wine-details__subtitle">Detalles del Vino</h3>
@@ -92,7 +93,7 @@
             </div>
         </section>
     
-        <section class="wine-tasting">
+        <section class="wine-tasting animate__animated hidden animated-element">
             <div class="wine-container">
                 <h2 class="wine-tasting__title">Notas de Cata</h2>
                 <div class="wine-tasting__grid">
@@ -115,7 +116,7 @@
             </div>
         </section>
     
-        <section class="wine-data">
+        <section class="wine-data animate__animated hidden animated-element">
             <div class="wine-container">
                 <h2 class="wine-data__title">Datos Analíticos</h2>
                 <div class="wine-data__grid">
