--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -28,6 +28,7 @@
         onload="this.rel='stylesheet'">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/animate.css">
     <title>Nosotros - Flota Wines </title>
 </head>
 
@@ -93,7 +94,7 @@
     <main>
 
         <div class="nosotros-container">
-            <section class="section-nosotros">
+            <section class="section-nosotros animate__animated hidden animated-element">
                 <div class="about-image">
                     <img src="../img/picnic.webp" alt="imagen sobre la flota">
                 </div>
@@ -110,7 +111,7 @@
                     </a>
                 </div>
             </section>
-            <section id="equipo" class="team">
+            <section id="equipo" class="team animate__animated hidden animated-element">
                 <div class="container">
                     <h2>Nuestro Equipo</h2>
                     <div class="team-grid">
@@ -139,7 +140,7 @@
                 </div>
             </section>
 
-            <section class="laflota-history">
+            <section class="laflota-history animate__animated hidden animated-element">
                 <div class="laflota-history__container">
                     <div class="laflota-history__content">
                         <h2 class="laflota-history__title">Nuestra Historia</h2>
@@ -156,7 +157,7 @@
                 </div>
             </section>
 
-            <section class="laflota-process">
+            <section class="laflota-process animate__animated hidden animated-element">
                 <div class="laflota-process__container">
                     <h2 class="laflota-process__title">El Arte de Nuestro Vino</h2>
                     <div class="laflota-process__grid">
@@ -216,7 +217,7 @@
                 </div>
             </section>
 
-            <section class="laflota-origins">
+            <section class="laflota-origins animate__animated hidden animated-element">
                 <div class="laflota-origins__container">
                     <div class="laflota-origins__content">
                         <h2 class="laflota-origins__title" id="origin">Los Orígenes de La Flota</h2>
