se optimizaron las imagenes de la web

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -38,7 +38,7 @@
         <nav class="navbar navbar-expand-lg botonera">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../iconos/logo-la-flota-hd.png" alt="logo de flota wines" id="logo" class="iconowines">
+                    <img src="../iconos/flota-logo.png" alt="logo de flota wines" id="logo" class="iconowines">
                 </a>
                 <button class="navbar-toggler button-burger" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
