--- a/index.html
+++ b/index.html
@@ -24,13 +24,16 @@
     -->
     <link rel="canonical" href="https://laflotawines.com.ar">
     <link rel="icon" href="./iconos/logo-flota-text.png" type="image/png">
-    <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<noscript>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</noscript>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" as="style"
+        onload="this.onload=null;this.rel='stylesheet'"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <noscript>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    </noscript>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <title>La Flota Wines | Vino Premium</title>
 </head>
@@ -40,7 +43,7 @@
         <nav class="navbar navbar-expand-lg botonera">
             <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html">
-                    <img src="./iconos/logo-la-flota-hd.png" alt="logo de flota wines" id="logo" class="iconowines">
+                    <img src="./iconos/flota-logo.png" alt="logo de flota wines" id="logo" class="iconowines">
                 </a>
                 <button class="navbar-toggler button-burger" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -84,7 +87,8 @@
                 <div class="info-container-text">
                     <h2 class="h2-white">Acerca de nuestro vino</h2>
                     <span class="span-vino">Hay un conjunto de embarcaciones que ya zarpó y queremos que conozcas
-                        Del lugar más especial de Mendoza a toda la Argentina, LA FLOTA se está acercando para empezar a formar parte de esos momentos que quisieras guardar para siempre. 
+                        Del lugar más especial de Mendoza a toda la Argentina, LA FLOTA se está acercando para empezar a
+                        formar parte de esos momentos que quisieras guardar para siempre.
                         Este mapa del tesoro tiene mucho más para descubrir
                     </span>
                     <a href="./pages/laflota.html" class="a-ficha">
@@ -168,10 +172,10 @@
     <script src="js/navbar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/main.js"></script>
-    <a href="https://api.whatsapp.com/send?phone=2657326848&text=Hola, me gustaria Obtener más información sobre la flota" class="float pulse" target="_blank">
+    <a href="https://api.whatsapp.com/send?phone=2657326848&text=Hola, me gustaria Obtener más información sobre la flota"
+        class="float pulse" target="_blank">
         <i class=" fa-brands fa fa-whatsapp my-float" aria-hidden="true"></i>
-        </a>
+    </a>
 </body>
 
 </html>
-
