se optimaron imagenes

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     </a>
                 </div>
                 <img src="./img/la-Flota.webp" alt="botella de vino la flota" class="info-image">
-                <img src="./iconos/logo-la-flota-hd.png" alt="logo de la flota" class="logo-info">
+                <img src="./iconos/logo-la-flota-hd.webp" alt="logo de la flota" class="logo-info">
             </div>
         </section>
         <section>
