--- a/pages/laflota.html
+++ b/pages/laflota.html
@@ -31,7 +31,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
-
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
     <title>La Flota Malbec | Flota Wines</title>
 </head>
@@ -73,29 +73,7 @@
     </header>
     <!-- Main Content -->
     <main class="main-laflota">
-        <section class="wine-showcase hidden">
-            <div class="wine-container wine-showcase__grid">
-                <div class="wine-bottle">
-                    <div class="wine-bottle__wrapper">
-                        <img src="../img/flota-ficha3.webp" alt="La Flota Malbec 2024" class="wine-bottle__image">
-                    </div>
-                </div>
-                <div class="wine-details ">
-                    <h2 class="wine-details__title">La Flota Malbec 2024</h2>
-                    <div class="wine-details__box">
-                        <h3 class="wine-details__subtitle">Detalles del Vino</h3>
-                        <ul class="wine-details__list">
-                            <li><i class="fas fa-wine-bottle"></i> Variedad: Malbec 100%</li>
-                            <li><i class="fas fa-calendar"></i> Cosecha: 2024</li>
-                            <li><i class="fas fa-map-marker-alt"></i> Ubicación: Cordón del Plata y Vista Flores, Valle de Uco</li>
-                            <li><i class="fas fa-wine-glass"></i> Partida limitada: 5000 botellas</li>
-                            <li><i class="fas fa-user"></i> Enólogo: Rodrigo Camera</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </section>
-    
+
         <section class="wine-tasting hidden">
             <div class="wine-container">
                 <h2 class="wine-tasting__title">Notas de Cata</h2>
@@ -184,6 +162,28 @@
                 </div>
             </div>
         </section>
+        <section class="wine-showcase hidden">
+            <div class="wine-container wine-showcase__grid">
+                <div class="wine-bottle">
+                    <div class="wine-bottle__wrapper">
+                        <img src="../img/flota-ficha3.webp" alt="La Flota Malbec 2024" class="wine-bottle__image">
+                    </div>
+                </div>
+                <div class="wine-details ">
+                    <h2 class="wine-details__title">La Flota Malbec 2024</h2>
+                    <div class="wine-details__box">
+                        <h3 class="wine-details__subtitle">Detalles del Vino</h3>
+                        <ul class="wine-details__list">
+                            <li><i class="fas fa-wine-bottle"></i> Variedad: Malbec 100%</li>
+                            <li><i class="fas fa-calendar"></i> Cosecha: 2024</li>
+                            <li><i class="fas fa-map-marker-alt"></i> Ubicación: Cordón del Plata y Vista Flores, Valle de Uco</li>
+                            <li><i class="fas fa-wine-glass"></i> Partida limitada: 5000 botellas</li>
+                            <li><i class="fas fa-user"></i> Enólogo: Rodrigo Camera</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
@@ -238,3 +238,4 @@
 </body>
 
 </html>
+
