se actualizo el index con una seccion de video y representa a los creadores

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -74,7 +74,7 @@
                 </div>
                 <div class="contact-container">
                     <div class="div-form">
-                        <form>
+                        <form action="https://formspree.io/f/xqaekanp" method="POST">
                             <div class="form-group">
                                 <label for="name">Nombre</label>
                                 <input type="text" id="name" name="name" required>
@@ -140,7 +140,7 @@
                     <a href="#" class="cta-button"><button class="btn">Más información</button></a>
                 </div>
                 <div class="distribution-image">
-                    <img src="../img/la-Flota.webp" alt="Distribución de La Flota Malbec" class="floating">
+                    <img src="../img/la-flota.webp" alt="Distribución de La Flota Malbec" class="floating">
                 </div>
             </div>
         </section>
