--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,7 +23,7 @@
     <meta name="twitter:image" content="https://laflotawines.com.ar/images/logo.jpg">img/la-Flota.png
     -->
     <link rel="canonical" href="https://laflotawines.com.ar">
-    <link rel="icon" href="./iconos/logo-flota-text.png" type="image/png">
+    <link rel="icon" href="./iconos/logoflota.png" type="image/png">
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" as="style"
         onload="this.onload=null;this.rel='stylesheet'"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -97,7 +98,7 @@
                         </button>
                     </a>
                 </div>
-                <img src="./img/la-Flota.webp" alt="botella de vino la flota" class="info-image">
+                <img src="./img/la-flota.webp" alt="botella de vino la flota" class="info-image">
                 <img src="./iconos/logo-la-flota-hd.webp" alt="logo de la flota" class="logo-info">
             </div>
         </section>
@@ -122,7 +123,66 @@
                 </div>
             </section>
         </section>
+        <section class="main-flotawines">
+            <div class="seccion-principal">
+            <!-- Título de la galería -->
+            <h2 class="titulo-galeria">Creadores del Vino</h2>
 
+            <!-- Contenedor Superior con Galería -->
+            <div class="contenedor-superior">
+                <!-- Galería de Imágenes -->
+                <div class="galeria-vinos">
+                    <article class="tarjeta-vino">
+                        <img src="./img/german-sanchez.jpg" alt="Drupy con Flotawines" class="imagen-vino">
+                        <div class="overlay-texto">
+                            <h3>German Sanchez</h3>
+                            <p class="descripcion">Experto en viticultura con años de experiencia en la creación de vinos excepcionales.</p>
+                        </div>
+                    </article>
+
+                    <article class="tarjeta-vino">
+                        <img src="./img/rodrigo-enologo.jpg" alt="Rodrigo Enólogo" class="imagen-vino">
+                        <div class="overlay-texto">
+                            <h3>Rodrigo Camera</h3>
+                            <p class="descripcion">Enólogo apasionado, dedicado a perfeccionar cada detalle en la elaboración de nuestros vinos.</p>
+                        </div>
+                    </article>
+
+                    <article class="tarjeta-vino">
+                        <img src="./img/german-sanchez.jpg" alt="Otro Creador" class="imagen-vino">
+                        <div class="overlay-texto">
+                            <h3>Pablo Satti</h3>
+                            <p class="descripcion">Sommelier experta, responsable de la selección y mezcla de nuestros mejores vinos.</p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+
+            <!-- Contenedor Inferior con Descripción y Video -->
+            <div class="contenedor-inferior">
+                <div class="contenedor-descripcion">
+                    <h2>Descubre la Esencia de Flotawines</h2>
+                    <p>Tres amigos, una pasión y un sueño compartido: crear un vino que represente su espíritu aventurero. Lo que comenzó como "Timón" evolucionó hasta convertirse en La Flota, un nombre que simboliza el viaje, la amistad y el esfuerzo conjunto. En esta entrevista,  </p>
+                    <p>sus creadores nos cuentan cómo nació este proyecto. los desafíos que enfrentaron y qué hace único a este vino. ¡Descubrí su historia!. Flotawines eleva cada ocasión.</p>
+                </div>
+
+                <div class="contenedor-video">
+                    <video id="video-flotawines" class="video">
+                        <source src="./img/video entrevista.mp4" type="video/mp4">
+                    </video>
+                    <div class="barra-progreso">
+                        <div id="progreso" class="progreso"></div>
+                    </div>
+                    <button id="boton-play" class="boton-play">
+                        <span class="icono-play">▶</span>
+                        <span class="texto-play">Play para ver entrevista</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+        </section>
+
+            
 
     </main>
 
