se optimizaron imagenes y se adapto el footer

--- a/error404.html
+++ b/error404.html
@@ -28,11 +28,6 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-
-                        <li class="nav-item">
-                            <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
-                        </li>
-                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./pages/laflota.html">Vino Flota wines</a>
                         </li>
@@ -52,9 +47,9 @@
         <div class="laflota-error__container">
             <div class="laflota-error__content">
                 <h1 class="laflota-error__title">404</h1>
-                <p class="laflota-error__text">Oops! Parece que te has perdido en nuestros viñedos.</p>
+                <p class="laflota-error__text">Oops! Parece que has perdido el timón. regresa a la flota!</p>
                 <div class="laflota-error__image">
-                    <img src="./iconos/logo-la-flota-hd.png" alt="Logo La Flota" class="laflota-error__logo">
+                    <img src="./iconos/logo-la-flota-hd.webp" alt="Logo La Flota" class="laflota-error__logo">
                     <div class="laflota-error__wine-bottle">
                         <i class="fas fa-wine-bottle"></i>
                         <div class="laflota-error__wine-spill"></div>
