--- a/index.html
+++ b/index.html
@@ -53,11 +53,6 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-
-                        <li class="nav-item">
-                            <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
-                        </li>
-                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./pages/laflota.html">Vino Flota wines</a>
                         </li>
@@ -77,8 +72,8 @@
         <section id="home" class="hero ">
             <div class="hero-content animate__animated hidden animated-element">
                 <h1>La Flota Wines</h1>
-                <p>Descubre la excelencia de nuestro La Flota Malbec</p>
-                <a href="./pages/laflota.html" class="btn">Conoce Nuestro Vino</a>
+                <p>EXPLORA NUEVAS SENSACIONES</p>
+                <a href="./pages/laflota.html" class="btn">Conócelo</a>
             </div>
         </section>
 
@@ -86,11 +81,8 @@
         <section>
             <div class="info-container">
                 <div class="info-container-text">
-                    <h2 class="h2-white">Acerca de nuestro vino</h2>
-                    <span class="span-vino">Hay un conjunto de embarcaciones que ya zarpó y queremos que conozcas
-                        Del lugar más especial de Mendoza a toda la Argentina, LA FLOTA se está acercando para empezar a
-                        formar parte de esos momentos que quisieras guardar para siempre.
-                        Este mapa del tesoro tiene mucho más para descubrir
+                    <h2 class="h2-white">Un vino para todo</h2>
+                    <span class="span-vino">La flota rompe los paradigmas del mundo del vino, es una propuesta simple de altísima calidad que solo hay que disfrutarlo.
                     </span>
                     <a href="./pages/laflota.html" class="a-ficha">
                         <button class="btn" id="btn-ficha">
@@ -102,27 +94,17 @@
                 <img src="./iconos/logo-la-flota-hd.webp" alt="logo de la flota" class="logo-info">
             </div>
         </section>
-        <section>
 
             <section class="image-grid hidden">
                 <div class="grid-item">
-
                     <img src="https://images.unsplash.com/photo-1560493676-04071c5f467b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1074&q=80"
                         alt="Viñedo">
-                </div>
-                <div class="grid-item">
-                    <img src="https://images.unsplash.com/photo-1516594915697-87eb3b1c14ea?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
-                        alt="Barricas de vino">
                 </div>
                 <div class="grid-item">
                     <img src="./img/vino-carne.webp" alt="vino y carne">
                 </div>
-                <div class="grid-item">
-                    <img src="https://images.unsplash.com/photo-1560493676-04071c5f467b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1074&q=80"
-                        alt="Viñedo">
-                </div>
             </section>
-        </section>
+
         <section class="main-flotawines">
             <div class="seccion-principal">
             <!-- Título de la galería -->
@@ -133,27 +115,28 @@
                 <!-- Galería de Imágenes -->
                 <div class="galeria-vinos">
                     <article class="tarjeta-vino">
-                        <img src="./img/german-sanchez.jpg" alt="Drupy con Flotawines" class="imagen-vino">
+                        <img src="./img/german-sanchez.webp" alt="Drupy con Flotawines" class="imagen-vino">
                         <div class="overlay-texto">
                             <h3>German Sanchez</h3>
-                            <p class="descripcion">Experto en viticultura con años de experiencia en la creación de vinos excepcionales.</p>
+                            <p class="descripcion">Te lo hará conocer y llevártelo hasta tu mesa
+                            </p>
                         </div>
                     </article>
 
                     <article class="tarjeta-vino">
-                        <img src="./img/rodrigo-enologo.jpg" alt="Rodrigo Enólogo" class="imagen-vino">
+                        <img src="./img/rodrigo-enologo.webp" alt="Rodrigo Enólogo" class="imagen-vino">
                         <div class="overlay-texto">
                             <h3>Rodrigo Camera</h3>
-                            <p class="descripcion">Enólogo apasionado, dedicado a perfeccionar cada detalle en la elaboración de nuestros vinos.</p>
+                            <p class="descripcion">Nuestro hacedor, nuestro artista 
+                            </p>
                         </div>
                     </article>
 
                     <article class="tarjeta-vino">
-                        <img src="./img/german-sanchez.jpg" alt="Otro Creador" class="imagen-vino">
+                        <img src="./img/pablo-foto.webp" alt="Otro Creador" class="imagen-vino">
                         <div class="overlay-texto">
                             <h3>Pablo Satti</h3>
-                            <p class="descripcion">Sommelier experta, responsable de la selección y mezcla de nuestros mejores vinos.</p>
-                        </div>
+                            <p class="descripcion">Lleva la Flota a buen puerto
                     </article>
                 </div>
             </div>
@@ -161,9 +144,9 @@
             <!-- Contenedor Inferior con Descripción y Video -->
             <div class="contenedor-inferior">
                 <div class="contenedor-descripcion">
-                    <h2>Descubre la Esencia de Flotawines</h2>
-                    <p>Tres amigos, una pasión y un sueño compartido: crear un vino que represente su espíritu aventurero. Lo que comenzó como "Timón" evolucionó hasta convertirse en La Flota, un nombre que simboliza el viaje, la amistad y el esfuerzo conjunto. En esta entrevista,  </p>
-                    <p>sus creadores nos cuentan cómo nació este proyecto. los desafíos que enfrentaron y qué hace único a este vino. ¡Descubrí su historia!. Flotawines eleva cada ocasión.</p>
+                    <h2>Nosotros</h2>
+                    <p>Tres amigos con una pasión compartida la de crear vinos que ofrezcan una experiencia descontracturada, accesible inspirada en el espíritu libre y aventurero</p>
+                    
                 </div>
 
                 <div class="contenedor-video">
@@ -189,24 +172,21 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="group1-footer">
-            <div class="box">
-                <h2>SOBRE NOSOTROS</h2>
-                <p>En La Flota Wines, nuestra pasión por el vino va más allá de una simple bebida</p>
-                <p>Precios bajos y gran variedad de productos disponibles</p>
-                <P>mas de 10 años brindando lo mejor de nosotros!</P>
-            </div>
             <div class="red-social">
                 <h2>SIGUENOS EN NUESTRAS REDES</h2>
-                <a href="# target=" _blank" class="red-social-footer">
-                    <img src="./iconos/linkedin.svg" alt="linkedin de flota wines">
-                </a>
+                
                 <a href="https://www.instagram.com/laflotawines/" class="red-social-footer" target="_blank">
                     <img src="./iconos/instagram.svg" alt="instagram de la flota wines">
+                </a>
+                <!-- Footer 
+                <a href="# target=" _blank" class="red-social-footer">
+                    <img src="./iconos/linkedin.svg" alt="linkedin de flota wines">
                 </a>
                 <a href="#" target="_blank" class="red-social-footer">
                     <img src="./iconos/github.png" alt="acceso al desarrollador">
                 </a>
-                <p>puedes escribirnos por nuestras redes!</p>
+                -->
+                <p>puedes navegar por nuestras redes!</p>
                 <p>forma parte de nuestra comunidad!</p>
             </div>
         </div>
@@ -221,7 +201,7 @@
             </ul>
         </div>
         <div class="group2-footer">
-            <small>&copy;2024 <b>Vinos Wines</b> - Todos Los Derechos Reservados</small>
+            <small>&copy;2025 <b>Vinos Wines</b> - Todos Los Derechos Reservados</small>
         </div>
     </footer>
 
