--- a/pages/laflota.html
+++ b/pages/laflota.html
@@ -53,10 +53,6 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
                         <li class="nav-item">
-                            <a class="nav-link" href="./nosotros.html">Nosotros</a>
-                        </li>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href="./laflota.html">Vino Flota wines</a>
                         </li>
                         <li class="nav-item">
@@ -85,9 +81,8 @@
                             <div class="laflota-process__icon">
                                 <i class="fas fa-seedling"></i>
                             </div>
-                            <h3>Selección de Uvas</h3>
-                            <p>Nuestras uvas Malbec son cuidadosamente seleccionadas a mano en el momento óptimo de
-                                maduración, asegurando la más alta calidad desde el inicio.</p>
+                            <h3>Uvas</h3>
+                            <p>las uvas son provenientes del cordón del Plata y vista Flores cosechadas a mano en cajones de 20 kg y en punto óptimo de madurez (24 brix)</p>
                         </div>
                     </div>
                     <div class="laflota-process__step">
@@ -99,8 +94,7 @@
                                 <i class="fas fa-wine-bottle"></i>
                             </div>
                             <h3>Fermentación</h3>
-                            <p>La fermentación se realiza en tanques de acero inoxidable con temperatura controlada,
-                                permitiendo extraer los mejores aromas y sabores de nuestras uvas.</p>
+                            <p>El proceso se realizó en vasija de acero inoxidable, la fermentación se llevó a cabo durante 12 días la temperatura oscilaron entre los 24 y 28 grados logrando un vino equilibrado con una adecuada extracción de taninos</p>
                         </div>
                     </div>
                     <div class="laflota-process__step">
@@ -111,9 +105,8 @@
                             <div class="laflota-process__icon">
                                 <i class="fas fa-box"></i>
                             </div>
-                            <h3>Añejamiento</h3>
-                            <p>Nuestro vino madura pacientemente en barricas de roble francés y americano durante 12
-                                meses, desarrollando complejidad y estructura únicas.</p>
+                            <h3>Conservación</h3>
+                            <p>El vino no se conservó en barricas si no que una vez terminado el proceso de fermentación y luego de un par des trasiegos post invierno se embotelló logrando expresar las características  varietales de la zona</p>
                         </div>
                     </div>
                     <div class="laflota-process__step">
@@ -125,8 +118,7 @@
                                 <i class="fas fa-glass-cheers"></i>
                             </div>
                             <h3>Embotellado</h3>
-                            <p>Cada botella es llenada con precisión y sellada para preservar los sabores y aromas
-                                únicos de nuestro vino, listo para ser disfrutado.</p>
+                            <p>El mismo se realizó por una fraccionadora móvil y el vestido se realizó de manera manual  por medio de etiquetadoras profesionales logrando los mejores estándares de calidad en cada botella</p>
                         </div>
                     </div>
                 </div>
@@ -280,12 +272,6 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="group1-footer">
-            <div class="box">
-                <h2>SOBRE NOSOTROS</h2>
-                <p>En La Flota Wines, nuestra pasión por el vino va más allá de una simple bebida</p>
-                <p>Precios bajos y gran variedad de productos disponibles</p>
-                <P>mas de 10 años brindando lo mejor de nosotros!</P>
-            </div>
             <div class="red-social">
                 <h2>SIGUENOS EN NUESTRAS REDES</h2>
                 <a href="#" target="_blank" class="red-social-footer">
@@ -312,7 +298,7 @@
             </ul>
         </div>
         <div class="group2-footer">
-            <small>&copy;2024 <b>Vinos Wines</b> - Todos Los Derechos Reservados</small>
+            <small>&copy;2025 <b>Vinos Wines</b> - Todos Los Derechos Reservados</small>
         </div>
     </footer>
 
