en proceso el apartdado de distribuidores

--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
                             <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Distribuidores</a>
+                            <a class="nav-link" href="./pages/distribuidores.html">Distribuidores</a>
                         </li>
+                        
                     </ul>
                 </div>
             </div>
@@ -150,7 +151,7 @@
 
                 <div class="contenedor-video">
                     <video id="video-flotawines" class="video">
-                        <source src="./img/video entrevista.mp4" type="video/mp4">
+                        <source src="./img/video-entrevista.mp4" type="video/mp4">
                     </video>
                     <div class="barra-progreso">
                         <div id="progreso" class="progreso"></div>
@@ -218,3 +219,5 @@
 </body>
 
 </html>
+
+
