--- a/error404.html
+++ b/error404.html
@@ -35,7 +35,7 @@
                             <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Distribuidores</a>
+                            <a class="nav-link" href="./pages/distribuidores.html">Distribuidores</a>
                         </li>
 
                     </ul>
