--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -54,7 +54,7 @@
                             <a class="nav-link" href="./contacto.html">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Distribuidores</a>
+                            <a class="nav-link" href="./distribuidores.html">Distribuidores</a>
                         </li>
 
                     </ul>
@@ -136,7 +136,7 @@
                 <div class="distribution-text">
                     <h2 class="h2-dark">¿Quieres distribuir nuestro producto?</h2>
                     <p class="p-dark">Únete a nuestra red de distribuidores y lleva La Flota Malbec a más personas. Ofrecemos condiciones excepcionales para nuestros socios comerciales.</p>
-                    <a href="#" class="cta-button"><button class="btn">Más información</button></a>
+                    <a href="./distribuidores.html" class="cta-button"><button class="btn">Más información</button></a>
                 </div>
                 <div class="distribution-image">
                     <img src="../img/la-flota.webp" alt="Distribución de La Flota Malbec" class="floating">
