--- a/pages/laflota.html
+++ b/pages/laflota.html
@@ -58,7 +58,7 @@
                             <a class="nav-link" href="./contacto.html">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Distribuidores</a>
+                            <a class="nav-link" href="./distribuidores.html">Distribuidores</a>
                         </li>
 
                     </ul>
